objects/ASI_MFM_Plan_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AD_AP__c</fullName>
        <label>A&amp;D/A&amp;P</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_First_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Category__c</fullName>
        <label>AP Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code_Only__c</fullName>
        <formula>ASI_MFM_AP_Code__r.ASI_MFM_AP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Description__c</fullName>
        <formula>ASI_MFM_AP_Code__r.ASI_MFM_AP_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Type__c</fullName>
        <label>AP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>Trade Off SA</fullName>
                </value>
                <value>
                    <fullName>Trade AP</fullName>
                </value>
                <value>
                    <fullName>Media A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Other A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Trade A&amp;P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AccountsAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Actual_Spending_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For KR MFM Use, In Local Currency</description>
        <label>Actual Spending Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Area_of_Activation__c</fullName>
        <label>Area of Activation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Consumer Engagement</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Retail Activation</fullName>
                </value>
                <value>
                    <fullName>Trade Relationships</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active BU Code.</errorMessage>
            <filterItems>
                <field>ASI_MFM_BU__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Carry_Forward__c</fullName>
        <label>Carry Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_MFM_Channel_Allocation__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <formula>ASI_MFM_Sub_brand_Code__r.ASI_MFM_Company_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <formula>Text(ASI_MFM_Plan__r.ASI_MFM_Currency__c)</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer_Code__c</fullName>
        <formula>ASI_MFM_Customer_Name__r.ASI_MFM_Customer_Supplier_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR (1 AND 10)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (HK)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TR Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>GF Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>RM Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI JP Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Outlet,TH Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (SG),  Wholesaler (SG), SG Customer, PH DF Customer, PH DP Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer__c</fullName>
        <formula>ASI_MFM_AccountsAdditionalField__r.ASI_CRM_MY_CustomerCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Distributor_Amount__c</fullName>
        <label>Distributor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Domain__c</fullName>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Back Office</fullName>
                </value>
                <value>
                    <fullName>Front Office</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Helpdesk</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>CIO/PMO/IT Governance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_End_Date_sys__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expected_Volume__c</fullName>
        <label>Exp. Vol.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_FOC_Size__c</fullName>
        <label>FOC Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>187ml</fullName>
                </value>
                <value>
                    <fullName>35ml</fullName>
                </value>
                <value>
                    <fullName>200ml</fullName>
                </value>
                <value>
                    <fullName>300ml</fullName>
                </value>
                <value>
                    <fullName>375ml</fullName>
                </value>
                <value>
                    <fullName>500ml</fullName>
                </value>
                <value>
                    <fullName>700ml</fullName>
                </value>
                <value>
                    <fullName>750ml</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>1.75L</fullName>
                </value>
                <value>
                    <fullName>2L</fullName>
                </value>
                <value>
                    <fullName>2.5L</fullName>
                </value>
                <value>
                    <fullName>3L</fullName>
                </value>
                <value>
                    <fullName>4.5L</fullName>
                </value>
                <value>
                    <fullName>9L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_year_sys__c</fullName>
        <formula>TEXT(ASI_MFM_Plan__r.ASI_MFM_Fiscal_year__c)</formula>
        <label>Fiscal year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_Total_Amount__c</fullName>
        <formula>ASI_MFM_Total_Cost__c +  ASI_MFM_Distributor_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Justification__c</fullName>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_subLedger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>pLine_bc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_List_Item_Description__c</fullName>
        <label>List Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_10_Cost__c</fullName>
        <label>Apr(P10)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_11_Cost__c</fullName>
        <label>May(P11)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Month_12_Cost__c</fullName>
        <label>Jun(P12)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Number_of_Outlets__c</fullName>
        <label>No. of Outlets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Original_Total_Cost__c</fullName>
        <label>Original Plan Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Over_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Budget?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PRPO_Needed__c</fullName>
        <formula>ASI_MFM_AP_Code__r.ASI_MFM_PRPO_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR/PO Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Amount_sys__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_Plan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_End_Date__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_End_Date__c</formula>
        <label>Sys_Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item_External_IDUpload__c</fullName>
        <externalId>true</externalId>
        <label>Plan Line Item External ID (Upload)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Plan Line Item External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item_Total_Amount__c</fullName>
        <formula>ASI_MFM_Month_1_Cost__c + 
ASI_MFM_Month_2_Cost__c +
ASI_MFM_Month_3_Cost__c + 
ASI_MFM_Month_4_Cost__c + 
ASI_MFM_Month_5_Cost__c + 
ASI_MFM_Month_6_Cost__c + 
ASI_MFM_Month_7_Cost__c + 
ASI_MFM_Month_8_Cost__c + 
ASI_MFM_Month_9_Cost__c + 
ASI_MFM_Month_10_Cost__c + 
ASI_MFM_Month_11_Cost__c + 
ASI_MFM_Month_12_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Line Item Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Month_Amount_SumUp__c</fullName>
        <formula>ASI_MFM_Month_1_Cost__c + ASI_MFM_Month_2_Cost__c + ASI_MFM_Month_3_Cost__c + ASI_MFM_Month_4_Cost__c + ASI_MFM_Month_5_Cost__c + ASI_MFM_Month_6_Cost__c + ASI_MFM_Month_7_Cost__c + ASI_MFM_Month_8_Cost__c + ASI_MFM_Month_9_Cost__c + ASI_MFM_Month_10_Cost__c + ASI_MFM_Month_11_Cost__c + ASI_MFM_Month_12_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Amount Sum Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Name_sys__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_Plan_Name__c</formula>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Start_Date__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_Start_Date__c</formula>
        <label>Sys_Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Type__c</fullName>
        <formula>TEXT(ASI_MFM_Plan__r.ASI_MFM_Plan_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>ASI_MFM_Plan__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_id_sys__c</fullName>
        <formula>ASI_MFM_Plan__r.Name</formula>
        <label>Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Print_Sequence__c</fullName>
        <label>Print Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Item</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Project_Code__c</fullName>
        <description>Get header project code id - KR</description>
        <label>Project Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quotation_Available_Date__c</fullName>
        <label>Quotation Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quotation__c</fullName>
        <label>Quotation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reference</label>
        <referenceTo>ASI_MFM_Reference__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SG_A_P_Segment__c</fullName>
        <label>A&amp;P Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer - Media - TV</fullName>
                </value>
                <value>
                    <fullName>Consumer - Media - Outdoor</fullName>
                </value>
                <value>
                    <fullName>Consumer - Media - Other Traditional Media</fullName>
                </value>
                <value>
                    <fullName>Consumer - Media - Online Advertiseing (D)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Media - Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Consumer - Media - Search &amp; Review (D)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Content - Owned Media (D)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Content - Content (D)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Visibility - E-Commerce (D)/(L3F)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Visibility - On-trade Visibility (L3F)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Visibility - Off-trade Visibility (L3F)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Visibility - Packaging / VAP (L3F)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Activation - E-CRM (D)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Activation - On-trade Activation (L3F)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Activation - Off-trade Activation (L3F)</fullName>
                </value>
                <value>
                    <fullName>Consumer - Activation - Ambassador Programs</fullName>
                </value>
                <value>
                    <fullName>Consumer - Activation - Brand Experience and PR</fullName>
                </value>
                <value>
                    <fullName>Consumer - Support Costs - Consumer &amp; Shopper Insight &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Consumer - Support Costs - NPD Development</fullName>
                </value>
                <value>
                    <fullName>Consumer - Support Costs - Production Costs and Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Customer - Customer Development and Trade A&amp;P - Merchandising Cost (L3F)</fullName>
                </value>
                <value>
                    <fullName>Customer - Customer Development and Trade A&amp;P - Customer &amp; Trade Incentives and Events</fullName>
                </value>
                <value>
                    <fullName>Customer - Customer Development and Trade A&amp;P - Other Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Customer - Demand Driving - Range &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Customer - Demand Driving - Visibility (L3F)</fullName>
                </value>
                <value>
                    <fullName>Customer - Demand Driving - Promotional (L3F)</fullName>
                </value>
                <value>
                    <fullName>Customer - Demand Driving - Category Development</fullName>
                </value>
                <value>
                    <fullName>Customer - Growth - Growth</fullName>
                </value>
                <value>
                    <fullName>Customer - Effeciency - Supplier Chain</fullName>
                </value>
                <value>
                    <fullName>Customer - Effeciency - Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Code</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>187ml</fullName>
                </value>
                <value>
                    <fullName>200ml</fullName>
                </value>
                <value>
                    <fullName>375ml</fullName>
                </value>
                <value>
                    <fullName>500ml</fullName>
                </value>
                <value>
                    <fullName>700ml</fullName>
                </value>
                <value>
                    <fullName>750ml</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>1.75L</fullName>
                </value>
                <value>
                    <fullName>1.95L</fullName>
                </value>
                <value>
                    <fullName>2L</fullName>
                </value>
                <value>
                    <fullName>2.2L</fullName>
                </value>
                <value>
                    <fullName>3L</fullName>
                </value>
                <value>
                    <fullName>4.5L</fullName>
                </value>
                <value>
                    <fullName>12YO_700ml</fullName>
                </value>
                <value>
                    <fullName>Abunadh_700ml</fullName>
                </value>
                <value>
                    <fullName>Chardonnay_750ml</fullName>
                </value>
                <value>
                    <fullName>ELE_900ml</fullName>
                </value>
                <value>
                    <fullName>Gran Reserva_750ml</fullName>
                </value>
                <value>
                    <fullName>Grenache_750ml</fullName>
                </value>
                <value>
                    <fullName>Merlot_750ml</fullName>
                </value>
                <value>
                    <fullName>Pinot Noir_750ml</fullName>
                </value>
                <value>
                    <fullName>Reserva_750ml</fullName>
                </value>
                <value>
                    <fullName>Sauvignon Blanc_750ml</fullName>
                </value>
                <value>
                    <fullName>Shiraz_375ml</fullName>
                </value>
                <value>
                    <fullName>Shiraz_750ml</fullName>
                </value>
                <value>
                    <fullName>Sparkling_750ml</fullName>
                </value>
                <value>
                    <fullName>Still_750ml</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Start_Date_Sys__c</fullName>
        <formula>ASI_MFM_Plan__r.ASI_MFM_Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand_Code_Name__c</fullName>
        <formula>ASI_MFM_Sub_brand_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Code Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand_Code_Only__c</fullName>
        <formula>ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Allocation_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Allocation Type</label>
        <referenceTo>ASI_MFM_Sub_brand_Allocation__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub-brand Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4) OR (5 AND 6 AND 7 AND 8) OR (9 AND 10)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>TH Plan Line Item,TW Plan Line Item, MY Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TH CRM Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_TH_CRM_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>TH Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_TH_CRM_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_CRM_TW_Company__c</field>
                <operation>equals</operation>
                <value>PRT</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY Plan Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MY Sub brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>Plan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Name__c</fullName>
        <formula>ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Deduplication_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Sys_Deduplication Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Missing_Quotation_Check__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sys_Missing Quotation Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Sync_Time_Milli__c</fullName>
        <label>Sys Sync Time Milli</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Sync_Time__c</fullName>
        <label>Sys_Sync Time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>